# rubixd-cli

./: Cargo.toml
src/: client.rs  main.rs  output.rs
src/cmd/: audit.rs  bundle.rs  claim.rs  mod.rs  status.rs  tls.rs  update.rs
