[package]
name = "blockd-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Remote management CLI for the blockd supervisor daemon"
publish = false

[[bin]]
name = "blockd-cli"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive", "env"] }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
indicatif  = "0.17"
